# mlops-gcp

./: .gitignore  README.md  _config.yml  _toc.yml  docs.md  intro.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
_static/: custom.css
content/: 01-ml-development.md  02-training-operationalization.ipynb  02-training-operationalization.md  03-continuous-training.ipynb  03-continuous-training.md  04-model-deployment.ipynb  04-model-deployment.md  05-prediction-serving.md  06-continuous-monitoring.md  07-data-and-model-management.md  08-dataset-and-feature-management.md  09-model-management.md
