[project]
name = "mlops-gcp"
version = "0.1.0"
description = "MLOps Deep Dive Jupyter Book"
requires-python = ">=3.9"
dependencies = [
    "jupyter-book>=1.0.4.post1",
    "sphinxcontrib-mermaid>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
